--- a/build.xml
+++ b/build.xml
@@ -9,7 +9,7 @@
 	<description> Tictactoe project for testing with CI. </description>
 
 	<!-- location of src and output (build) directories. -->
-	<property name="src.dir" location="${src.dir}" />
+	<property name="src.dir" location="src" />
 	<property name="build.dir" location="bin" />
 	<property name="dist.dir" location="." />
 	<property name="test.src.dir" location="test" />
@@ -19,9 +19,9 @@
 
 	<path id="test.classpath">
 		<!-- include all Jars in the lib directory (for JUnit) -->
-		<fileset dir="lib" includes="*.jar" />
+		<fileset dir="${lib.dir}" includes="*.jar" />
 		<!-- always need the build directory on the classpath -->
-		<pathelement location="bin" />
+		<pathelement location="${build.dir}" />
 	</path>
 
 	<!-- The "deps" target is used on Travis CI to install dependencies. -->
@@ -35,23 +35,30 @@
 	</target>
 
 	<target name="clean" description="Delete build products and build directory">
-		<delete dir="bin" />
+		<delete dir="${build.dir}" />
+		<delete dir="${test.build.dir}" />
 	</target>
 
 	<!-- create the build directory for output -->
 	<target name="init" description="Create output directories if they don't exist">
-		<mkdir dir="bin" />
-		<mkdir dir="bin/test" />
+		<mkdir dir="${build.dir}" />
+		<mkdir dir="${test.build.dir}" />
 	</target>
 
 	<!-- compile the source code -->
 	<target name="compile" depends="init" description="Compile source code">
-		<javac srcdir="src" destdir="bin" includeantruntime="false" />
+		<javac srcdir="${src.dir}" destdir="${build.dir}" includeantruntime="false" />
+		<!-- copy fxml files from src tree to build tree, including subdirs -->
+		<copy todir="${build.dir}">
+			<fileset dir="${src.dir}">
+				<include name="**/*.fxml" />
+			</fileset>
+		</copy>
 	</target>
 
 	<!-- compile the test code -->
 	<target name="test-compile" depends="init,compile" description="Compile unit test source code">
-		<javac srcdir="test" destdir="bin/test" includeantruntime="false">
+		<javac srcdir="${test.src.dir}" destdir="${test.build.dir}" includeantruntime="false">
 			<classpath refid="test.classpath" />
 		</javac>
 	</target>
@@ -61,27 +68,22 @@
 		<junit fork="true" printsummary="on" haltonfailure="false">
 			<classpath>
 				<path refid="test.classpath" />
-				<pathelement location="bin/test" />
+				<pathelement location="${test.build.dir}" />
 			</classpath>
 			<!-- What classes contain JUnit tests? -->
 			<batchtest>
-				<fileset dir="bin/test" includes="**/*Test.class" />
+				<fileset dir="${test.build.dir}" includes="**/*Test.class" />
 			</batchtest>
 		</junit>
 	</target>
 
 	<target name="jar" depends="compile">
 		<mkdir dir="dist" />
-		<jar destfile="dist/TicTacToeGame.jar" basedir="${build.dir}">
+		<jar destfile="dist/TicTacToe.jar" basedir="${build.dir}">
 			<manifest>
 				<attribute name="Main-Class" value="tictactoe.Main" />
 			</manifest>
 		</jar>
-		<copy todir="destination dir">
-			<fileset dir="dist">
-				<include name="**/*.fxml" />
-			</fileset>
-		</copy>
 	</target>
 
 	<target name="run" depends="jar">
